upgrade to java 21 and to spring boot 4.0.2